# Gestao-Contrato

./: .coveragerc  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CHANGELOG_MODERNIZACAO.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.brcobranca  MANIFEST.in  README.md  RENDER_SEM_SHELL.md  ROADMAP.md  SECURITY.md  SISTEMA.md  TROUBLESHOOTING.md  build.sh  bump_version.py  configurar_cronjob.py  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  setup.py
.claude/: settings.json
.githooks/: commit-msg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: check-ai-commits.yml  ci.yml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
contratos/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  urls.py  utils.py  validators.py  views.py
contratos/migrations/: 0001_initial.py  0002_prestacaointermediaria_parcela_vinculada.py  0003_contrato_reajuste_piso_teto.py  0004_reajuste_spread.py  0005_contrato_clausulas_vendedor_tabela_juros.py  0006_remove_vendedor_campos_redundantes.py  0007_contrato_intermediarias_parametros.py  0008_contrato_tipo_amortizacao.py  0009_contrato_testemunhas_escritura.py  0010_documento_assinado.py  0010_indicereajuste_numero_indice.py  0011_remove_documento_assinado_orphan_columns.py  0012_add_minuta_contrato.py  0013_add_contrato_importacao.py  0014_contratoimportacao_store_in_db.py  0015_contrato_metodo_cobranca.py  _sql_compat.py
contratos/services/: contrato_pdf_service.py  importacao_ia.py
core/: admin.py  apps.py  breadcrumbs.py  context_processors.py  crypto.py  db_fields.py  forms.py  hashids_utils.py  middleware.py  mixins.py  models.py  parametros.py  permissions.py  signals.py  tasks.py  urls.py  validators.py  version.py  views.py
core/migrations/: 0001_initial.py  0002_alter_contabilidade_cnpj.py  0002_reajuste_desconto_periodo_referencia.py  0003_imobiliaria_tipo_pessoa_cpf.py  0003_imovel_quadra_lote.py  0004_add_bank_specific_fields_to_conta_bancaria.py  0005_add_logo_imobiliaria.py  0006_add_vertice_poligono.py  0007_parametro_sistema.py  0007_planta_baixa_loteamento.py  0008_data_parametro_sistema.py  0009_parametro_modificado_manualmente.py  0010_loteamento_overlay.py  0011_acesso_negado_model.py  0012_comprador_contato_opcional.py  0013_registro_uso_ia.py  0014_limite_uso_ia.py  0015_limite_uso_ia_periodo.py  0016_log_auditoria_e_bloqueio_credito.py  0017_workflow_ia.py  0018_fix_workflowia_timestamps.py  0019_imobiliaria_visual_boleto.py  0020_boleto_api_provider_fields.py  0021_contabancaria_bapi_token_cifrado_and_more.py  0022_workflowiatier_modelo_sonnet5.py  0023_alter_logauditoria_acao_perfilusuario.py  0024_backfill_perfis_usuario.py
core/services/: __init__.py  brasilapi_service.py  ia_monitor.py
core/templatetags/: format_filters.py  hashid_tags.py
docs/: AVALIACAO_MELHORIAS.md  BRCOBRANCA_CAMPOS_REFERENCIA.md  CORRECAO_NECESSARIA_API.md  Demonstrativo_Calculo_Parcelas_Anuais_UANDA.docx  GRIDS_STATUS.md  INSTALACAO.md  L 16 Q D 24032021.docx  MODERNIZACAO_V1.0.1.md  Planilha_Henry_Magno_IGPM_.xlsx  Planilha_Uanda_Silva_IPCA _Saldo_Anual_Atualizado_Calculo_exato_2.xlsx  README.md  TODO_GESTAO_CONTRATOS.md  TODO_VIEWS_DASHBOARD.md  TODO_VISOES_DETALHADAS.md  VALIDACAO_API_CUSTOMIZADA.md  manual_comprador.md  manual_contador.md  manual_imobiliaria.md  manual_usuarios.md
docs/analise/: BENCHMARK_FLUXO_CONTADORA.md  (+3 more)
financeiro/: __init__.py  admin.py  models.py  public_urls.py  tasks.py  urls.py  views.py
gestao_contrato/: __version__.py  api_docs.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
notificacoes/: __init__.py  admin.py  ai_chatbot.py  apps.py  boleto_notificacao.py  forms.py  models.py  relatorio_templates.py  services.py  tasks.py  urls.py  views.py  whatsapp_bot.py
oracle_migration/: INSTALACAO.md  README.md  install.sql
portal_comprador/: __init__.py  admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
scripts/: bump_version.py  drop_public_tables.py  install_hooks.sh
templates/: base.html
tests/: README.md  __init__.py  conftest.py  test_models.py  test_smoke.py  test_tenant_isolation.py  test_validators.py  test_views.py
(+402 files in other folders)
